--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/png" href="https://www.zarla.com/images/zarla-s-1x1-2400x2400-20211119-wwrwkmmjcm7hh3wfkvcc.png?crop=1:1,smart&width=250&dpr=2" />
   <title>Shiva Prasad Sarkar | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -148,13 +149,13 @@
         <div class="project-card">
           <img src="space.png" alt="3D Space Shooter Game" />
           <h4>3D Space Shooter Game with OpenGL</h4>
-          <p>A Python and PyOpenGL‑based 3D space combat game featuring a player ship, enemies, bullets, a health system, and multiple camera perspectives.</p>
+          <p>A Python and PyOpenGL-based 3D space combat game featuring a player ship, enemies, bullets, a health system, and multiple camera perspectives.</p>
           <a href="https://github.com/Shiva-Prasad-Sarkar/Space_Shooter_OpenGL" class="btn" target="_blank">View Project</a>
         </div>
         <div class="project-card">
           <img src="catch.png" alt="Catch" />
           <h4>Catch the Diamond</h4>
-          <p>Python and openGl based game using Mid Point line drawing Algorithm with multiple functionalities.</p>
+          <p>Developed a Python and OpenGL-based game utilizing the Midpoint Line Drawing Algorithm, featuring multiple functionalities for enhanced graphical rendering.</p>
           <a href="https://github.com/Shiva-Prasad-Sarkar/GAMES-AND-PROJECTS/tree/main" class="btn" target="_blank">View Project</a>
         </div>
         <div class="project-card">
@@ -166,13 +167,13 @@
         <div class="project-card">
           <img src="TIC.PNG" alt="Blinking Ball" />
           <h4>Tic Tac Toe</h4>
-          <p>Python based game featuring my object oriented programming concepts</p>
+          <p>Developed a Python-based Tic Tac Toe game showcasing object-oriented programming concepts, including classes, encapsulation, and structured gameplay logic.</p>
           <a href="https://github.com/Shiva-Prasad-Sarkar/GAMES-AND-PROJECTS/tree/main" class="btn" target="_blank">View Project</a>
         </div>
         <div class="project-card">
           <img src="blink.png" alt="Catch" />
           <h4>Blinking Ball</h4>
-          <p>Python and openGl based game using multiple python libraries and vector concepts<p>
+          <p>Developed a Python and OpenGL-based game integrating multiple Python libraries and vector concepts for dynamic graphical rendering and interactive functionality.<p>
           <a href="https://github.com/Shiva-Prasad-Sarkar/GAMES-AND-PROJECTS/tree/main" class="btn" target="_blank">View Project</a>
         </div>
 
@@ -187,16 +188,34 @@
       <h3>🏅 Certificates & Achievements :</h3>
       <div class="projects-grid">
         <div class="project-card">
-          <img src="cert1.png" alt="Certificate 1" />
-          <h4>Machine Learning - Coursera</h4>
-          <p>Completed Andrew Ng's Machine Learning course on Coursera.</p>
-          <a href="https://coursera.org/verify/EXAMPLE" class="btn" target="_blank">View Certificate</a>
+          <img src="sql.png" alt="Certificate 1" />
+          <h4>Introduction to SQL</h4>
+          <p>Completed an Introduction to SQL course on DataCamp, gaining foundational skills in database management, querying, and data manipulation.</p>
+          <a href="https://drive.google.com/file/d/1lFImSUy52qZ30x4r2aJOBZ4X7rogWAsa/view?usp=drive_link" class="btn" target="_blank">View Certificate</a>
         </div>
         <div class="project-card">
-          <img src="cert2.png" alt="Certificate 2" />
-          <h4>Python for Everybody - Coursera</h4>
-          <p>Mastered Python fundamentals through real-world coding tasks.</p>
-          <a href="https://coursera.org/verify/EXAMPLE" class="btn" target="_blank">View Certificate</a>
+          <img src="game.png" alt="Certificate 2" />
+          <h4>E-Game Development Course </h4>
+          <p>Completed an E-Game Development course during Residential Semester, gaining hands-on experience in game design using Unity engine.</p>
+          <a href="https://drive.google.com/file/d/1-yOWIpzMk9ZURotURu-3BOegwa4ys5yV/view?usp=drive_link" class="btn" target="_blank">View Certificate</a>
+        </div>
+        <div class="project-card">
+          <img src="github.jpeg" alt="Certificate 2" />
+          <h4>Introduction to Git and Github </h4>
+          <p>Completed Git and GitHub basics, mastering version control, repository management, branching, merging, and troubleshooting workflows for efficient collaboration. </p>
+          <a href="https://drive.google.com/file/d/1-yOWIpzMk9ZURotURu-3BOegwa4ys5yV/view?usp=drive_link" class="btn" target="_blank">View Certificate</a>
+        </div>
+        <div class="project-card">
+          <img src="ieee.png" alt="Certificate 2" />
+          <h4>ML Playbook Foundation and Apllication </h4>
+          <p>Completed ML Playbook Foundation and Application, gaining insights into machine learning principles, model development, and practical implementations.</p>
+          <a href="https://drive.google.com/file/d/1LECuZhGXW9s9SDvTJBsQeOgS-n-XrPkA/view?usp=sharing" class="btn" target="_blank">View Certificate</a>
+        </div>
+        <div class="project-card">
+          <img src="cip.jpeg" alt="Certificate 2" />
+          <h4>Introduction to Critical Infrastructure Protection </h4>
+          <p>Completed Introduction to Critical Infrastructure Protection, gaining insights into safeguarding essential systems against threats and vulnerabilities.</p>
+          <a href="https://drive.google.com/file/d/1LTKUeFMQqV5YVtFLpKQAoV5_DtMaBYA_/view?usp=drive_link" class="btn" target="_blank">View Certificate</a>
         </div>
       </div>
     </div>
