--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <img src="github.jpeg" alt="Certificate 2" />
           <h4>Introduction to Git and Github </h4>
           <p>Completed Git and GitHub basics, mastering version control, repository management, branching, merging, and troubleshooting workflows for efficient collaboration. </p>
-          <a href="https://drive.google.com/file/d/1-yOWIpzMk9ZURotURu-3BOegwa4ys5yV/view?usp=drive_link" class="btn" target="_blank">View Certificate</a>
+          <a href="https://drive.google.com/file/d/1o8oXyCKiopqpV6XcrKkioWrcWF9wgjur/view?usp=sharing" class="btn" target="_blank">View Certificate</a>
         </div>
         <div class="project-card">
           <img src="ieee.png" alt="Certificate 2" />
