--- a/index.html
+++ b/index.html
@@ -194,25 +194,25 @@
           <a href="https://drive.google.com/file/d/1lFImSUy52qZ30x4r2aJOBZ4X7rogWAsa/view?usp=drive_link" class="btn" target="_blank">View Certificate</a>
         </div>
         <div class="project-card">
-          <img src="game.png" alt="Certificate 2" />
+          <img src="game.jpeg" alt="Certificate 2" />
           <h4>E-Game Development Course </h4>
           <p>Completed an E-Game Development course during Residential Semester, gaining hands-on experience in game design using Unity engine.</p>
           <a href="https://drive.google.com/file/d/1-yOWIpzMk9ZURotURu-3BOegwa4ys5yV/view?usp=drive_link" class="btn" target="_blank">View Certificate</a>
         </div>
         <div class="project-card">
-          <img src="github.jpeg" alt="Certificate 2" />
+          <img src="github.jpeg" alt="Certificate 3" />
           <h4>Introduction to Git and Github </h4>
           <p>Completed Git and GitHub basics, mastering version control, repository management, branching, merging, and troubleshooting workflows for efficient collaboration. </p>
           <a href="https://drive.google.com/file/d/1o8oXyCKiopqpV6XcrKkioWrcWF9wgjur/view?usp=sharing" class="btn" target="_blank">View Certificate</a>
         </div>
         <div class="project-card">
-          <img src="ieee.png" alt="Certificate 2" />
+          <img src="ieee.png" alt="Certificate 4" />
           <h4>ML Playbook Foundation and Apllication </h4>
           <p>Completed ML Playbook Foundation and Application, gaining insights into machine learning principles, model development, and practical implementations.</p>
           <a href="https://drive.google.com/file/d/1LECuZhGXW9s9SDvTJBsQeOgS-n-XrPkA/view?usp=sharing" class="btn" target="_blank">View Certificate</a>
         </div>
         <div class="project-card">
-          <img src="cip.jpeg" alt="Certificate 2" />
+          <img src="cip.jpeg" alt="Certificate 5" />
           <h4>Introduction to Critical Infrastructure Protection </h4>
           <p>Completed Introduction to Critical Infrastructure Protection, gaining insights into safeguarding essential systems against threats and vulnerabilities.</p>
           <a href="https://drive.google.com/file/d/1LTKUeFMQqV5YVtFLpKQAoV5_DtMaBYA_/view?usp=drive_link" class="btn" target="_blank">View Certificate</a>
