--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           <a href="https://drive.google.com/file/d/1o8oXyCKiopqpV6XcrKkioWrcWF9wgjur/view?usp=sharing" class="btn" target="_blank">View Certificate</a>
         </div>
         <div class="project-card">
-          <img src="ieee.png" alt="Certificate 4" />
+          <img src="ieee.jpg" alt="Certificate 4" />
           <h4>ML Playbook Foundation and Apllication </h4>
           <p>Completed ML Playbook Foundation and Application, gaining insights into machine learning principles, model development, and practical implementations.</p>
           <a href="https://drive.google.com/file/d/1LECuZhGXW9s9SDvTJBsQeOgS-n-XrPkA/view?usp=sharing" class="btn" target="_blank">View Certificate</a>
