--- a/index.html
+++ b/index.html
@@ -217,6 +217,12 @@
           <p>Completed Introduction to Critical Infrastructure Protection, gaining insights into safeguarding essential systems against threats and vulnerabilities.</p>
           <a href="https://drive.google.com/file/d/1LTKUeFMQqV5YVtFLpKQAoV5_DtMaBYA_/view?usp=drive_link" class="btn" target="_blank">View Certificate</a>
         </div>
+        <div class="project-card">
+          <img src="ml.jpg" alt="Certificate 6" />
+          <h4>Understanding Machine Learning </h4>
+          <p>Completed Understanding Machine Learning, gaining expertise in algorithm development, data analysis, and AI-driven problem-solving for real-world applications.</p>
+          <a href="https://drive.google.com/file/d/1fz7XDWzST09wSUtvDIHwHbTWbQzohww1/view?usp=sharing" class="btn" target="_blank">View Certificate</a>
+        </div>
       </div>
     </div>
   </section>
