--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><a href="#mygames">Games</a></li>
           <li><a href="#certificates">Certificates</a></li>
           <li><a href="#videos">Videos</a></li>
+          <li><a href="#Research">Researches</a></li>
           <li><a href="#blogs">Blogs</a></li>
           <li><a href="#cv">CV</a></li>
           <li><a href="#connect">Connect</a></li>
@@ -102,9 +103,9 @@
   <!-- Projects Section -->
   <section class="projects" id="projects">
     <div class="container">
+      <div class="projects-grid">
       <h3>🚀 My Projects:</h3>
 
-      <div class="projects-grid">
         <!-- Project Card 2 -->
         <div class="project-card">
           <img src="eco.png" alt="EcoGrow Nursery Management System" />
@@ -148,9 +149,9 @@
   <!-- My Games Section -->
   <section class="projects" id="mygames">
     <div class="container">
+      <div class="projects-grid">
       <h3>🎮 My Games :</h3>
 
-      <div class="projects-grid">
         <div class="project-card">
           <img src="space.png" alt="3D Space Shooter Game" />
           <h4>3D Space Shooter Game with OpenGL</h4>
@@ -189,9 +190,9 @@
   <!-- Certificates & Achievements Section -->
   <section class="projects" id="certificates">
     <div class="container">
+      <div class="projects-grid">
       <h3>🏅 Certificates & Achievements :</h3>
 
-      <div class="projects-grid">
         <div class="project-card">
           <img src="sql.png" alt="Certificate 1" />
           <h4>Introduction to SQL</h4>
@@ -239,9 +240,9 @@
   <!-- Videos -->
   <section class="projects" id="videos">
     <div class="container">
+      <div class="projects-grid">
       <h3>📽️ Videos :</h3>
 
-      <div class="projects-grid">
         <div class="project-card">
           <img src="notepad.png" alt="Video 1" />
           <h4>Notepad as Universal IDE</h4>
@@ -268,6 +269,40 @@
       </div>
     </div>
   </section>
+
+
+
+
+ <!-- Research -->
+  <section class="projects" id="videos">
+    <div class="container">
+      <div class="projects-grid">
+      <h3>🧾 Researches :</h3>
+
+        <div class="project-card">
+          <h4>Price Hike - PBL</h4>
+          <p><p>An analytical look at Bangladesh's rising prices—examining the causes, consequences, and trends through existing studies, news reports, and economic insights.</p>
+          <a href="https://docs.google.com/document/d/1JbR72taRSzV4ksc4JjllSer8GWDpQ8X3MRgjHMmhFu4/edit?usp=sharing" class="btn" target="_blank">View Video</a>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
 
 
     <!-- Blogs -->
