--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="#mygames">Games</a></li>
           <li><a href="#certificates">Certificates</a></li>
           <li><a href="#videos">Videos</a></li>
-          <li><a href="#Research">Researches</a></li>
+          <li><a href="#Researches">Researches</a></li>
           <li><a href="#blogs">Blogs</a></li>
           <li><a href="#cv">CV</a></li>
           <li><a href="#connect">Connect</a></li>
@@ -274,7 +274,7 @@
 
 
  <!-- Research -->
-  <section class="projects" id="videos">
+  <section class="projects" id="Researches">
     <div class="container">
       <h3>🧾 Researches :</h3>
 
@@ -282,7 +282,7 @@
         <div class="project-card">
           <h4>Price Hike - PBL</h4>
           <p><p>An analytical look at Bangladesh's rising prices—examining the causes, consequences, and trends through existing studies, news reports, and economic insights.</p>
-          <a href="https://docs.google.com/document/d/1JbR72taRSzV4ksc4JjllSer8GWDpQ8X3MRgjHMmhFu4/edit?usp=sharing" class="btn" target="_blank">View Video</a>
+          <a href="https://docs.google.com/document/d/1JbR72taRSzV4ksc4JjllSer8GWDpQ8X3MRgjHMmhFu4/edit?usp=sharing" class="btn" target="_blank">View Research</a>
         </div>
 
       </div>
