--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         <div class="project-card">
           <h4>Price Hike - PBL</h4>
           <p><p>An analytical look at Bangladesh's rising prices—examining the causes, consequences, and trends through existing studies, news reports, and economic insights.</p>
-          <a href="https://docs.google.com/document/d/1JbR72taRSzV4ksc4JjllSer8GWDpQ8X3MRgjHMmhFu4/edit?usp=sharing" class="btn" target="_blank">View Research</a>
+          <a href="pbl.html" class="btn" target="_blank">View Research</a>
         </div>
 
       </div>
