--- a/index.html
+++ b/index.html
@@ -5,7 +5,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/png" href="https://www.zarla.com/images/zarla-s-1x1-2400x2400-20211119-wwrwkmmjcm7hh3wfkvcc.png?crop=1:1,smart&width=250&dpr=2" />
   <title>Shiva Prasad Sarkar | Portfolio</title>
+  <meta name="description" content="Portfolio of Shiva Prasad Sarkar — CSE Undergrad at BRAC University, Bangladesh. Showcasing skills, projects, certificates, blogs, games, research, and more.">
+  <meta name="keywords" content="Shiva Prasad Sarkar, BRAC University, Portfolio, CSE, Projects, Games, Blogs, Research, Certificates">
+  <meta name="author" content="Shiva Prasad Sarkar">
+  
+  <meta property="og:title" content="Shiva Prasad Sarkar | Portfolio">
+  <meta property="og:description" content="Explore the projects, skills, and achievements of Shiva Prasad Sarkar, a CSE undergraduate in Bangladesh.">
+  <meta property="og:image" content="https://shiva-prasad-sarkar.github.io/Portfolio-Website/og-image.png">
+  <meta property="og:url" content="https://shiva-prasad-sarkar.github.io/Portfolio-Website/">
+  <meta property="og:type" content="website">
+  
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Shiva Prasad Sarkar | Portfolio">
+  <meta name="twitter:description" content="Discover the portfolio of Shiva Prasad Sarkar—projects, games, blogs, and more.">
+  <meta name="twitter:image" content="https://shiva-prasad-sarkar.github.io/Portfolio-Website/og-image.png">
+
   <link rel="stylesheet" href="style.css" />
+
+ <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Shiva Prasad Sarkar",
+  "url": "https://shiva-prasad-sarkar.github.io/Portfolio-Website/",
+  "sameAs": [
+    "https://github.com/Shiva-Prasad-Sarkar",
+    "https://linkedin.com/in/shiva-prasad-sarkar-4700ab227/",
+    "https://facebook.com/shivaprasadsarkar.sps/",
+    "https://leetcode.com/user9575st/",
+    "https://codeforces.com/profile/SpS__79"
+  ],
+  "jobTitle": "CSE Undergraduate Student",
+  "alumniOf": {
+    "@type": "EducationalOrganization",
+    "name": "BRAC University"
+  }
+}
+</script>
+
+
 </head>
 <body>
 
@@ -37,7 +75,7 @@
     <div class="container">
       <h1>
         <img src="https://i.gifer.com/Wczc.gif" height="55" width="55" alt="Animated Icon">
-        I am Shiva
+        <strong>I am Shiva</strong>
       </h1>
       <h2>A CSE Undergrad Student from Brac University, Bangladesh</h2>
     </div>
@@ -363,3 +401,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
