--- a/index.html
+++ b/index.html
@@ -323,6 +323,15 @@
           <a href="pbl.html" class="btn" target="_blank">View Research</a>
         </div>
 
+        <div class="projects-grid">
+  <div class="project-card">
+    <h4>Case Study: Fatal Self-Driving Car Crash</h4>
+    <p>An in-depth analysis of the 2016 Tesla self-driving car accident—covering the incident, causes, ethical implications, and lessons learned.</p>
+    <a href="Case6_2_1_Fatal_SelfDriving_Crash.html" class="btn" target="_blank">View Case Study</a>
+  </div>
+</div>
+
+
       </div>
     </div>
   </section>
@@ -401,4 +410,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
