--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
   <div class="project-card">
     <h4>Case Study: Fatal Self-Driving Car Crash</h4>
     <p>An in-depth analysis of the 2016 Tesla self-driving car accident—covering the incident, causes, ethical implications, and lessons learned.</p>
-    <a href="Case6_2_1_Fatal_SelfDriving_Crash.html" class="btn" target="_blank">View Case Study</a>
+    <a href="case422.html" class="btn" target="_blank">View Case Study</a>
   </div>
 </div>
 
@@ -410,5 +410,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
