--- a/index.html
+++ b/index.html
@@ -179,6 +179,28 @@
           <p>Simulated and visualized damped harmonic motion using Python libraries (NumPy, SciPy, Matplotlib).</p>
           <a href="https://github.com/Shiva-Prasad-Sarkar/MATH-LAB-PROJECT" class="btn" target="_blank">View Project</a>
         </div>
+        <!-- Project Card: Minibank -->
+        <div class="project-card">
+          <img src="minibank.png" alt="Minibank Microprocessor Project" />
+          <h4>Minibank – Microprocessor Assembly Project</h4>
+          <p>Developed a simple banking system simulation using x86 assembly language.</p>
+          <a href="https://github.com/Shiva-Prasad-Sarkar/Microprocessor-" class="btn" target="_blank">View Project</a>
+        </div>
+        <!-- Project Card: Mixed Signal Generator -->
+        <div class="project-card">
+          <img src="signal.png" alt="Mixed Signal Generator" />
+          <h4>Mixed Signal Generator – Analog Electronics Project</h4>
+          <p>Designed and implemented sine, cosine, triangular, and square wave generators using Schmitt trigger and Wien bridge oscillator circuits with op-amps.</p>
+          <a href="https://github.com/Shiva-Prasad-Sarkar/Mixed-Signal-Generator" class="btn" target="_blank">View Project</a>
+        </div>
+        <!-- Project Card: Heart Disease Prediction -->
+        <div class="project-card">
+          <img src="heart.png" alt="Heart Disease Prediction" />
+          <h4>Heart Disease Prediction – Machine Learning Project</h4>
+          <p>Built a machine learning model to predict the likelihood of heart disease using clinical datasets and classification algorithms.</p>
+          <a href="https://github.com/Shiva-Prasad-Sarkar/ML-Project" class="btn" target="_blank">View Project</a>
+        </div>
+
 
       </div>
     </div>
@@ -410,6 +432,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
