--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
   <section class="projects" id="videos">
     <div class="container">
       <h3>📽️ Videos :</h3>
+      <h3> <a href="https://www.youtube.com/@sps79" class="btn" target="_blank">-View My Channel-</a></div></h3>
 
       <div class="projects-grid">
         <div class="project-card">
@@ -432,6 +433,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
