--- a/index.html
+++ b/index.html
@@ -301,30 +301,30 @@
   <section class="projects" id="videos">
     <div class="container">
       <h3>📽️ Videos :</h3>
-      <h3> <a href="https://www.youtube.com/@sps79" class="btn" target="_blank">-View My Channel-</a></div></h3>
+      <h3> <a href="https://www.youtube.com/@sps79" class="btn" target="_blank"><b>View My Channel</b></a></div></h3>
 
       <div class="projects-grid">
         <div class="project-card">
-          <img src="notepad.png" alt="Video 1" />
-          <h4>Notepad as Universal IDE</h4>
-          <p>How to use Notepad and Terminal for Java,C++ and Python code runner</p>
-          <a href="https://youtu.be/R28hqB3a9JE?si=6Tg4CyrzxaE8jqnU" class="btn" target="_blank">View Video</a>
+          <img src="ctrl.png" alt="Video 1" />
+          <h4>Ctrl + Know</h4>
+          <p>Quick tips, smart tricks, and simple tutorials to help you master everyday tools. Whether you're tweaking settings or learning shortcuts, this playlist puts control back in your hands—fast, clear, and practical.</p>
+          <a href="https://youtube.com/playlist?list=PLbX94XAtAnrlxH-bldmcrIyVgIZOF7Ucl&si=iZ5HtYcDOk49yA3Z" class="btn" target="_blank">View Playlist</a>
         </div>
 
         <div class="projects-grid">
         <div class="project-card">
-          <img src="space.png" alt="Video 2" />
-          <h4>Space Shooter GamePlay</h4>
-          <p>Game play for project Space shooter showing all the features</p>
-          <a href="https://youtu.be/vgER14iH06I?si=_xHSrxbDP17TYUW1" class="btn" target="_blank">View Video</a>
+          <img src="problem.png" alt="Video 2" />
+          <h4>Python Problem Solving</h4>
+          <p>Problem-solving tutorials on different online judges like LeetCode and Codeforces using Python.</p>
+          <a href="https://youtube.com/playlist?list=PLbX94XAtAnrkKYR_kbCdilPmJRfs5cGPl&si=ufv4Ij2YbbmqAMTW" class="btn" target="_blank">View Playlist</a>
         </div>
 
         <div class="projects-grid">
         <div class="project-card">
-          <img src="eco.png" alt="Video 3" />
-          <h4>Ecogrow website Visit</h4>
-          <p>Website visiting for php and mysql project "Ecogrow" showing all the features</p>
-          <a href="https://youtu.be/h6Dk3CJh87c?si=5hvP5SU_e12UXMXu" class="btn" target="_blank">View Video</a>
+          <img src="pp.png" alt="Video 3" />
+          <h4>Projects</h4>
+          <p>A growing collection of everything I build—from tech experiments to creative side quests. Watch ideas come to life, one project at a time.</p>
+          <a href="https://youtube.com/playlist?list=PLbX94XAtAnrk1IpOaInrkFgCjTLhnDSFl&si=66WlGdDXvJSNNrzH" class="btn" target="_blank">View Playlist</a>
         </div>
 
       </div>
@@ -433,6 +433,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
