--- a/aa.html
+++ b/aa.html
@@ -369,7 +369,7 @@
 
         <!-- Card 2 -->
         <article class="card" tabindex="0" data-project='{"title":"3D Space Shooter","img":"https://i.imgur.com/4r2xIkM.jpg","desc":"Python + PyOpenGL 3D space shooter with enemy AI, bullets, and camera modes."}'>
-          <img loading="lazy" src="https://i.imgur.com/4r2xIkM.jpg" alt="3D Space Shooter screenshot">
+          <img loading="lazy" src="enemy.png">
           <h4>3D Space Shooter (OpenGL)</h4>
           <p>A PyOpenGL based 3D combat game with multiple camera views and full combat logic.</p>
           <div style="display:flex;gap:.5rem;align-items:center">
