--- a/index.html
+++ b/index.html
@@ -48,8 +48,25 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet">
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="styles.css">
+  <!-- CSS with fallback for GitHub Pages -->
+  <link rel="stylesheet" href="./styles.css">
+  <style>
+    /* Fallback styles in case CSS file doesn't load */
+    body {
+      font-family: "Inter", "Roboto", system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial, sans-serif;
+      background: #0a0a0a;
+      color: #f0f0f0;
+      margin: 0;
+      padding: 0;
+      line-height: 1.45;
+    }
+    .wrap {
+      width: 92%;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 1.25rem 0;
+    }
+  </style>
 </head>
 <body>
 
@@ -701,6 +718,6 @@
       document.body.classList.add('loaded');
     });
   </script>
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
