--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
         <!-- Mixed Signal Generator -->
         <article class="card" tabindex="0" data-project='{"title":"Mixed Signal Generator","img":"signal.png","desc":"Designed and implemented sine, cosine, triangular, and square wave generators using Schmitt trigger and Wien bridge oscillator circuits."}'>
-          <img loading="lazy" src="signal.png" alt="Mixed Signal Generator">
+          <img loading="lazy" src="350.jpeg" alt="Mixed Signal Generator">
           <h4>Mixed Signal Generator – Analog Electronics Project</h4>
           <p>Designed and implemented sine, cosine, triangular, and square wave generators using Schmitt trigger and Wien bridge oscillator circuits with op-amps.</p>
           <div style="display:flex;gap:.5rem;align-items:center">
@@ -721,3 +721,4 @@
   <script src="./script.js"></script>
 </body>
 </html>
+
