--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       </div>
 
       <aside class="hero-card" aria-label="Profile">
-        <img class="avatar" src="https://sm.ign.com/t/ign_sea/news/j/james-gunn/james-gunn-throws-cold-water-on-the-batman-video-game-rumor_bqyd.1920.jpg" alt="Shiva Prasad Sarkar — The Dark Knight Developer" loading="lazy">
+        <img class="avatar" src="sps.png" alt="Shiva Prasad Sarkar — The Dark Knight Developer" loading="lazy">
         <div class="stats" style="margin-top:0.8rem">
           <div class="stat"><h3>15+</h3><p>Projects</p></div>
           <div class="stat"><h3>10+</h3><p>Games</p></div>
@@ -779,5 +779,6 @@
   <script src="./script.js"></script>
 </body>
 </html>
+
 
 
